--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "engines": {
+    "node": "11.4.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
